# idapi

./: README.md  idapi.cabal  stack.yaml
config/: config.ini  models  routes
src/: Api.hs  Database.hs  Handlers.hs  Main.hs  Model.hs
