name:                idapi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/idapi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable idapi
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:      AppM
                      Database
                      EmbeddedAPI
                      Model
                      Api
                      Handlers
  build-depends:      base >= 4.7 && < 5
                    , yesod
                    , yesod-core
                    , yesod-static
                    , wai
                    , servant-server
                    , text
                    , swagger2
                    , servant-swagger
                    , lens
                    , persistent
                    , persistent-postgresql
                    , persistent-sqlite
                    , persistent-template
                    , monad-logger
                    , transformers
                    , either
                    , resource-pool
                    , mtl
                    , aeson
                    , bytestring
                    , esqueleto
                    , unliftio-core
                    , time
